# scriptlang

./: .gitignore  .hgignore  Eval.hs  Expr.hs  Main.hs  Parse.hs  README.md  Repl.hs  Scriptlang.hs  Test.hs  build.bat  history  notes.txt  oldnotes.txt  scriptlang.cabal  spec.txt  stdlib  stdlib.script  stdlib.txt
